// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/cascader/demo/basic.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label"></span>
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/change-on-select.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label"></span>
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/custom-render.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker" style="width: 100%;"><input value="" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label"><span><span>
        Zhejiang / 
      </span></span><span><span>
        Hangzhou / 
      </span></span><span><span>
      West Lake (<a>752100</a>)
      </span></span>
</span>
<i class="anticon anticon-cross-circle ant-cascader-picker-clear"></i>
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/custom-trigger.md correctly 1`] = `
<span>
  Unselect
  &nbsp;
  <a href="#" tabindex="0" class="">Change city</a></span>
`;

exports[`renders ./components/cascader/demo/default-value.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker"><input value="" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label">Zhejiang / Hangzhou / West Lake</span>
<i class="anticon anticon-cross-circle ant-cascader-picker-clear"></i>
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/disabled-option.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label"></span>
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/hover.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label"></span>
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/lazy.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label"></span>
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/search.md correctly 1`] = `
<span tabindex="0" class="ant-cascader-picker"><span class="ant-cascader-picker-label"></span>
<input value="" placeholder="Please select" type="text" class="ant-input ant-cascader-input  ant-cascader-input ">
<i class="anticon anticon-down ant-cascader-picker-arrow"></i>
</span>
`;

exports[`renders ./components/cascader/demo/size.md correctly 1`] = `
<div><span tabindex="0" class="ant-cascader-picker ant-cascader-picker-large"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input ant-input-lg ant-cascader-input ant-input-lg"><span class="ant-cascader-picker-label"></span>
  <i
    class="anticon anticon-down ant-cascader-picker-arrow"></i>
    </span>
    <br>
    <br> <span tabindex="0" class="ant-cascader-picker"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input  ant-cascader-input "><span class="ant-cascader-picker-label"></span>
    <i class="anticon anticon-down ant-cascader-picker-arrow"></i>
    </span>
    <br>
    <br> <span tabindex="0" class="ant-cascader-picker ant-cascader-picker-small"><input value="" placeholder="Please select" type="text" readonly="true" class="ant-input ant-cascader-input ant-input-sm ant-cascader-input ant-input-sm"><span class="ant-cascader-picker-label"></span>
    <i
      class="anticon anticon-down ant-cascader-picker-arrow"></i>
      </span>
      <br>
      <br>
</div>
`;
